added em and strong

--- a/.github/Page1.html
+++ b/.github/Page1.html
@@ -2,5 +2,6 @@
 <html>
     <body> hello there</body>
     <p> hello there again</p>
-    <h1> hello there again again</h1>
+    <h1> hello <em>there</em> again</h1>
+    <p> <strong> hey</strong></p>
 </html>
