--- a/.github/example.html
+++ b/.github/example.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <p>This is my first page.</p>
+    <p>This is my first time trying to make a page.</p>
 </body>
 </html>
