--- a/.github/mainproject/page1.html
+++ b/.github/mainproject/page1.html
@@ -2,9 +2,9 @@
 <html>
     <head>Data1100</head>
 <body>
-    <p>The last VGS i went to had a super nice lounge area with air hockey and table tennis.
+    <p>Th last VGS i went to had a super nice lounge area with air hockey and table tennis.
         Me and my classmates used this room during the downtime between classes.
-        There were also s few really talented teachers primarily my homeroom and history teachers</p>
+        There were also s few really talented teachpkjkjkjjjjers primarily my homeroom and history teachers</p>
 
 
 
