--- a/.github/mainproject/page1.html
+++ b/.github/mainproject/page1.html
@@ -4,10 +4,12 @@
 <body>
     <p>Th last VGS i went to had a super nice lounge area with air hockey and table tennis.
         Me and my classmates used this room during the downtime between classes.
-        There were also s few really talented teachpkjkjkjjjjers primarily my homeroom and history teachers</p>
+        There were also s few really talented teachpkjkjkjjjjers primarily my homeroom and history teachers
+        -global user.email "youremail@example.com"
+    
+    </p>
 
-
-
+        
 
 
 </body>
