--- a/.github/mainproject/page1.html
+++ b/.github/mainproject/page1.html
@@ -7,7 +7,7 @@
         There were also s few really talented teachpkjkjkjjjjers primarily my homeroom and history teachers
     
     <h1> hello there</h1>
-    <p> sajdnsafbsafsahasda</p>
+    <p> testing 1</p>
     </p>
 
         
