--- a/.github/mainproject/page2.html
+++ b/.github/mainproject/page2.html
@@ -2,7 +2,7 @@
 <html>
         <head> </head>
     <body>
-        <p> hello there burhan dsscxc</p>
+        <p> hello there burhan my good friend</p>
 
 
 
