added css in a separate folder, worked on page 1

--- a/.github/mainproject/page1.html
+++ b/.github/mainproject/page1.html
@@ -4,7 +4,7 @@
             <title>Gruppe 41 obligatory assignment 1</title>
             <h1>Patryk, Burhan og Haluk</h1>
             <meta charset="UTF-8">
-            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="css/style.css">
         </head>
 
     <body>
