changes in page 1

--- a/.github/mainproject/page1.html
+++ b/.github/mainproject/page1.html
@@ -5,6 +5,7 @@
             <h1>Patryk, Burhan og Haluk</h1>
             <meta charset="UTF-8">
             <link rel="stylesheet" href="css/style.css">
+            
         </head>
 
     <body>
@@ -16,12 +17,28 @@
             </br>People are also good at different things,
                 which means </br>all can contribute more in certain aspects of a specific task.
 
+
+
                 <p>Work becomes more effective since more people work on the</br> same task at once.
                 This means we spare more time and get</br> more things done in a specific time window.</p>
 
+
+
            <p>Working in groups is essential for constructive criticism,</br>
              which again is important for self-growth and getting</br> different perspectives and many things.</p>
+            <h3>Cons of working in a group</h3>
+            <p>Working in groups can often make people distracted,
+                because there is a lot going on.</br> Bias can also occur between people,
+                 if someone does not like one another.</p>
 
+            <p>Sometimes it may be hard to be heard across many people,
+            which</br> means some people can be more or less ignored or not given
+            enough attention. </br>Some people will in consequence say more,
+            while others will still have something to say but won’t be able to </p>
+            <p>Time waste may occur due to small things like finding a group room,</br>
+            technical difficulties or simply people not being on time or not having enough time.
+
+            </p>
   
                 
             </p>
