--- a/.github/mainproject/page2.html
+++ b/.github/mainproject/page2.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
-        <head> </head>
+        <head>
+        <link rel="stylesheet" href="css/style.css">    
+        </head>
     <body>
-        <p> hello there burhan my good friend</p>
+        <h1>385367</h1>
+        <p><a href="https://viken.no/malakoff-vgs/"
+            title="Links to Malakoff school webpage">
+            Malakoff videregående skole</a> is a school located in city Moss, south-east from Oslo.</br>
+            The line i went was called studiespesialisering, and i attended school 3 years in total.</br>
+            I studied many different courses, from which my favourites were chemistry and maths</br>
+            The school itself is located close to the centre of Moss, which makes it perfectly accessible</br>
+            for most people. My 3 years in this school were some of the greatest years of my life, where</br>
+            i got to meet many of my current friends and studied some great courses.
+        </p>
 
 
 
