--- a/.github/mainproject/page2.html
+++ b/.github/mainproject/page2.html
@@ -2,7 +2,10 @@
 <html>
         <head> </head>
     <body>
-        <p> hello there burhan my good friend</p>
+        <h1>385514  Haluk</h1>
+     <p>   "I have previously attended <a href="https://viken.no/aas-vgs/">Ås High School. </a> </br>
+            The education and teachers were of high quality, and I think I received a good education. </br>
+            I made good friends, and its location was close to where I lived." </p>
 
 
 
