--- a/.github/mainproject/page2.html
+++ b/.github/mainproject/page2.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" href="css/style.css">    
         </head>
     <body>
-main
-        <h1>385367</h1>
+
+        <h1>385367 Patryk</h1>
         <p><a href="https://viken.no/malakoff-vgs/"
             title="Links to Malakoff school webpage">
             Malakoff videregående skole</a> is a school located in city Moss, south-east from Oslo.</br>
