--- a/.github/mainproject/page1.html
+++ b/.github/mainproject/page1.html
@@ -15,17 +15,17 @@
             <p>Working in small groups gives ground for more ideas,</br>
                 because there are more people that can contribute.
             </br>People are also good at different things,
-                which means </br>all can contribute more in certain aspects of a specific task.
+                which means </br>all participants can contribute more in certain aspects of a specific task.
 
 
 
-                <p>Work becomes more effective since more people work on the</br> same task at once.
+                <p>Working becomes more effective since more people work on the</br> same task at once.
                 This means we spare more time and get</br> more things done in a specific time window.</p>
 
 
 
            <p>Working in groups is essential for constructive criticism,</br>
-             which again is important for self-growth and getting</br> different perspectives and many things.</p>
+             which again is important for self-growth and getting</br> different perspectives at many things and ideas.</p>
             <h3>Cons of working in a group</h3>
             <p>Working in groups can often make people distracted,
                 because there is a lot going on.</br> Bias can also occur between people,
