--- a/.github/mainproject/page2.html
+++ b/.github/mainproject/page2.html
@@ -20,8 +20,16 @@
      <p>   "I have previously attended <a href="https://viken.no/aas-vgs/">Ås High School. </a> </br>
             The education and teachers were of high quality, and I think I received a good education. </br>
             I made good friends, and its location was close to where I lived." </p>
+            
+            <h1>376318 Burhan</h1>    
+             <p><a href="https://elvebakken.vgs.no"
+                title="Elvebakken web page"> Elvebakken videregående skole</a> is located in the best part of Oslo </br>  
+                and the back side overlooks the beautiful river Aker. My favorite activity at school is playing table </br>
+        tennis with other classes in the garden.
 
 
+
+            </p>
 
 
     </body>
