added link to page 2

--- a/.github/mainproject/page1.html
+++ b/.github/mainproject/page1.html
@@ -39,7 +39,8 @@
 
             </p>
         
-
+        <p> <a href="page2.html"
+            title="Go to page 2"> Go to page 2!</a> </p>
         
 
 
