added link from page 2 to page 1

--- a/.github/mainproject/page2.html
+++ b/.github/mainproject/page2.html
@@ -27,7 +27,8 @@
                 and the back side overlooks the beautiful river Aker. My favorite activity at school is playing table </br>
         tennis with other classes in the garden.
 
-
+        <p> <a href="page1.html"
+            title="Go to page 1"> Go to page 1!</a> </p>
 
             </p>
 
