--- a/.github/mainproject/page2.html
+++ b/.github/mainproject/page2.html
@@ -17,9 +17,9 @@
         </p>
 
         <h1>385514  Haluk</h1>
-     <p>   "I have previously attended <a href="https://viken.no/aas-vgs/">Ås High School. </a> </br>
+     <p>   I have previously attended <a href="https://viken.no/aas-vgs/">Ås High School. </a> </br>
             The education and teachers were of high quality, and I think I received a good education. </br>
-            I made good friends, and its location was close to where I lived." </p>
+            I made good friends, and its location was close to where I lived. </p>
             
             <h1>376318 Burhan</h1>    
              <p><a href="https://elvebakken.vgs.no"
